--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "grunt-contrib-cssmin": "^4.0.0",
     "grunt-contrib-jshint": "~3.1.1",
     "grunt-contrib-uglify": "~5.0.1",
+    "grunt-exec": "^3.0.0",
     "grunt-sass": "~3.1.0",
     "grunt-wp-i18n": "^1.0.3",
-    "node-sass": "^7.0.0",
-    "matchdep": "^2.0.0"
+    "matchdep": "^2.0.0",
+    "node-sass": "^7.0.0"
   },
   "engines": {
     "node": ">=14.15.0"
